--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,9 +15,22 @@
 {% endblock %}
 
 {% block app_content %}
-    <div class="title">
-        <h1>Bringing Catheter Ablation To Community Hospitals</h1>
-        <h2>No upfront capital investment or new staffing.</h2>
-        <button type="button" class="btn btn-primary">Learn More</button>
+    <div class="row logo-container">
+        <div class="col-12">
+            <img class="pyrus-logo-square-hollow" src="static/images/logos/pyrus-logo-square-hollow.png"></img>
+        </div>
+    </div>
+
+    <div class="row tagline-container">
+        <div class="col-12">
+            <h1>Simple, safe, arrhythmia care</h1>
+            <h1 class="anywhere">anywhere</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <h2><a href="mailto:info@pyrusmedical.com">info@pyrusmedical.com</a></h2>
+        </div>
     </div>
 {% endblock %}
