--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -1,10 +1,5 @@
-.navbar {
-    background-color: white;
-}
-
-.navbar img {
-    padding: 5px 15px;
-    max-height: 40px;
+body {
+    color: black;
 }
 
 .clear {
