Change arrhythmia to endovascular

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
 
     <div class="row tagline-container">
         <div class="col-12">
-            <h1>Simple, safe, arrhythmia care</h1>
+            <h1>Simple, safe, endovascular care</h1>
             <h1 class="anywhere">anywhere</h1>
         </div>
     </div>
