--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Home {{super()}}{% endblock %}
+
 {% block styles %}
     {{super()}}
     {% assets "index_css" %}
