--- a/app/static/css/latencyTest.css
+++ b/app/static/css/latencyTest.css
@@ -24,10 +24,12 @@ button.start {
 }
 
 label.timer, label.thankyou {
+    display: none;
     font-size: 4em;
 }
 
 .latency {
+    display: none;
     font-size: 1.5em;
 }
 
